syntax = "proto3";
package bluk.games;

// Imports
import "types/permissions.proto";

// Service
service PermissionService {
  rpc GetUserPermissions (GetUserPermissionsRequest) returns (GetUserPermissionsResponse) {}
}

// Requests/Responses
message GetUserPermissionsRequest {
  string id = 1;
}

message GetUserPermissionsResponse {
  repeated Permission permissions = 1;
}